# gbf-automata

./: .env  .gitignore  README.md  images_path.json  package-lock.json  package.json  player.toml  pyproject.toml  settings.toml  webpack.config.js
.github/workflows/: main.yml
extension/: content.js  manifest.json  old.json  worker.js
extension/background/: worker.js
extension/content/: content.js
extension/scripts/: content.js
gbf_automata/: __main__.py  old__main__.py
gbf_automata/classes/: default.py  game_area.py
gbf_automata/data/: images.json
gbf_automata/enums/: arcarumv2_zone.py  content_type.py  game_states.py  state.py  states.py  template_match.py
gbf_automata/game/: gbf.py
gbf_automata/game/content/: arcarum_v2.py
gbf_automata/models/: coordinates.py  data.py  gbf_manager.py  image.py  message.py  render_manager.py
gbf_automata/server/: gbf_websocket.py  load_state.py  old_websocket.py  websocket.py
gbf_automata/services/: fsm.py  game_state.py
gbf_automata/services/states/: base_state.py  raid_state.py  result_state.py  start_state.py  supporter_state.py
gbf_automata/util/: application_settings.py  calibration.py  delay.py  images.py  logger.py  move.py  player_settings.py  rng.py  scroll.py  settings.py
gbf_ocr/: main.py
src/gbf_automata/: main.py  test.py
src/gbf_automata/classes/: default.py  game_area.py  game_state.py  home.py  load_state.py  state.py
src/gbf_automata/data/: images.json  test.json
src/gbf_automata/data/arcarum_v2/: coordinates.json  coordinates.py  coordinates_old.json  enemies.json  test.json
src/gbf_automata/enums/: arcarumv2_zone.py  content_type.py  state.py  template_match.py
src/gbf_automata/exception/: gbf_automata_exception.py
src/gbf_automata/game/: gbf.py
src/gbf_automata/game/content/: arcarum_v2.py
src/gbf_automata/schema/: arcarum_v2.py  coordinates.py  data.py  display.py  display_schema.py  image.py  image_area.py
src/gbf_automata/server/: tcp.py  websocket.py
src/gbf_automata/util/: environment.py  logger.py  rng.py  settings.py
src/gbf_automata/wrapper/: base.py  factory.py  x11.py
src/gbf_automata/wrapper/linux/: X11.py  x11.py
tests/: calibrate.py  game_area_test.py  overlay.py  template_matching.py  test_battle_area.py  test_game_area.py  wind_mouse.py  xserver_mouse.py
tools/: grayscale_converter.py
