[tool.poetry]
name = "gbf-automata"
version = "0.1.0"
description = ""
authors = ["Felipe Biaggi Carvalho <felipebiaggi@gmail.com>"]
readme = "README.md"
packages = [{include = "gbf_automata", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
opencv-python = "^4.8.0.74"
numpy = "^1.25.1"
pyautogui = "^0.9.54"
matplotlib = "^3.7.2"
pillow = "^10.0.0"
pathvalidate = "^3.0.0"
mss = "^9.0.1"
black = "^23.7.0"
pydantic = "^2.4.0"
pydantic-settings = "^2.0.2"

[tool.poetry.scripts]
start = "gbf_ocr.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
