[tool.poetry]
name = "gbf-automata"
version = "0.1.0"
description = ""
authors = ["Felipe Biaggi Carvalho <felipebiaggi@gmail.com>"]
readme = "README.md"
packages = [{include = "gbf_automata", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
opencv-python = "^4.8.0.74"
numpy = "^1.25.1"
pyautogui = "^0.9.54"
matplotlib = "^3.7.2"
pillow = "^10.0.0"
pathvalidate = "^3.0.0"
mss = "^9.0.1"
black = "^23.7.0"
pydantic = "^2.4.0"
pydantic-settings = "^2.0.2"
mypy = "^1.6.1"
websockets = "^12.0"

[tool.poetry.scripts]
start = "gbf_ocr.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
ignore_missing_imports = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pyright]
exclude = [ ".venv" ]
venvPath = "."
venv = ".venv"

