[tool.poetry]
name = "gbf-automata"
version = "0.1.0"
description = ""
authors = ["Felipe Biaggi Carvalho <felipebiaggi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.0"
opencv-python = "^4.8.0.74"
numpy = "^1.25.1"
pyautogui = "^0.9.54"
matplotlib = "^3.7.2"
pillow = "^10.0.0"
pathvalidate = "^3.0.0"
mss = "^9.0.1"
black = "^23.7.0"
pydantic = "^2.4.0"
pydantic-settings = "^2.0.2"
mypy = "^1.6.1"
websockets = "^12.0"
pyqt6 = "^6.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

target-version = "py312"

line-length = 88
indent-width = 4


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
